--- a/weeko6/css/_utilize.scss
+++ b/weeko6/css/_utilize.scss
@@ -2,153 +2,13 @@
     background-position: center center;
     background-size: cover;
 }
-.fz-48{
-    font-size: 3rem;
-    @media (max-width: 768px) { 
-        font-size: 2rem;
-}
-}
-.fz-24{
-    font-size: 1.5rem;
-}
-.fz-20{
-    @media (max-width: 768px) { 
-        font-size: 1.25rem;
-}
-}
-.modal{
-    .modal-dialog{
-        position: absolute;
-        right:0;
-            margin: auto;
-            height: 100%;
-            transform: translate3d(0%, 0, 0);
-    }
-    .modal-content{
-        height: 100%;
-		overflow-y: auto;
-    }
-}
-.md-h4{
-    font-size: 1.5rem;  
-    margin-bottom: 0.5rem;
-    font-weight: 500;
-    line-height: 1.2;
-    @media (max-width: 768px) { 
-        font-size: 1rem;
-}
-}
-.mr-30{
-    @media (max-width: 768px) { 
-        margin-right: 6%;;
-}
-}
-.py-6{
-    padding:14.4545% 0;
-    @media (max-width: 768px) { 
-        padding: 32% 0 14.4545% 0;
-}
-@media (max-width: 476px) { 
-    padding: 50% 0 14.4545% 0;
-}
-}
 .text-md-dark{
     @media (min-width: 768px) { 
         color: #000000 !important;
 }
 }
-.postion-top{
-        position: absolute;
-        top: 0;
-        right: 0;
-        left: 0;
-        z-index: 1;
+.postion-y{
+    top: 0;
+    bottom: 0;
 }
-
-.btn-md-block{
-    width: 265px;
-    height: 56px;
-    @media (max-width: 767px){
-        width: 100%;
-    }
-}
-.h-442{
-    height: 442px;
-    @media (max-width: 767px){
-        max-height: 360px;
-        
-    }
-}
-.h-400{
-    height: 400px;
-    @media (max-width: 767px){
-        max-height: 244px;
-        
-    }
-}
-.wh-226{
-    @media (min-width:768px) {
-        width: 266px;   
-        height: 56px;
-    } 
-}
-.wh-350{
-    width: 350px;
-    height: 350px;
-    @media (max-width: 1900px){
-        max-width: 350px;
-        max-height: 350px;
-    }
-    @media (max-width: 767px){
-        max-width: 240px;
-        max-height: 240px;
-        
-    }
-}
-.wh-445{
-    width: 445px;
-    height: 298px;  
-    margin-top: 25%;
-    margin-left: -25%;
-    @media (max-width: 767px){
-        max-width: 330px;
-        max-height: 241px;
-        margin-top: -10%;
-        margin-left: 8%;
-        
-    }
-}
-.w-446{
-    width: 446px;
-    @media (max-width: 767px){
-        width: 100%;
-        
-    }
-}
-.w-47{
-    @media (max-width: 767px){
-        width: 47%;
-        
-    }
-}
-.h-299{
-    height: 299px;
-    @media (max-width: 767px){
-        height: 213px;       
-    }
-}
-.h-409{
-    height: 409px;
-    @media (max-width: 767px){
-        height: 213px;       
-    }
-}
-.h-539{
-    height: 539px;
-    @media (max-width: 767px){
-        height: 213px;       
-    }
-}
-
-
 
