--- a/weeko6/css/all.scss
+++ b/weeko6/css/all.scss
@@ -5,3 +5,5 @@
 @import "../node_modules/bootstrap/scss/mixins";
 @import "../node_modules/bootstrap/scss/bootstrap";
 @import "utilize";
+@import "base";
+@import "custom";
