--- a/week07/css/all.css
+++ b/week07/css/all.css
@@ -11443,6 +11443,10 @@ a.text-dark:hover, a.text-dark:focus {
   font-size: 1.5rem;
 }
 
+.x-hidden {
+  overflow-x: hidden;
+}
+
 .bg-item1 {
   background-image: url("https://images.unsplash.com/photo-1497515098781-e965764ab601?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1308&q=80");
 }
@@ -11472,8 +11476,7 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .btn-xl {
-  width: 211px;
-  height: 61px;
+  padding: 4.266% 13.1%;
 }
 
 .btn-center {
