--- a/jQuery-finalwork/css/style.css
+++ b/jQuery-finalwork/css/style.css
@@ -11594,4 +11594,8 @@ body {
   -webkit-box-shadow: rgba(128, 128, 128, 0.6) 3px 5px;
           box-shadow: rgba(128, 128, 128, 0.6) 3px 5px;
 }
+
+.top {
+  left: 80%;
+}
 /*# sourceMappingURL=style.css.map */
