--- a/jsDay20/css/style.scss
+++ b/jsDay20/css/style.scss
@@ -21,6 +21,9 @@ a{
 .align-items-center{
     align-items: center;
 }
+.justify-content-center{
+    justify-content: center;
+}
 .text-white{
     color: white;
 }
@@ -32,6 +35,12 @@ a{
 }
 .logo{
     text-decoration: none;
+}
+.d-block{
+    display: block;
+}
+.d-none{
+    display: none;
 }
 h1{
     font-size: 36px;
@@ -68,6 +77,14 @@ h1{
     background-color: #3D82AD;
     border: 1px solid #B1D7FB;
     padding: 7px 25px;
+    margin-right: 20px;
+}
+.average{
+    color: white;
+    background-color: #3D82AD;
+    border: 1px solid #B1D7FB;
+    padding: 7px 25px;
+    margin-right: 20px;
 }
 h2{
     font-size: 28px;
@@ -85,6 +102,32 @@ h2{
             margin-bottom: 8px;
             font-weight: 600;
         }
+    }
+}
+.modal{
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba($color: black, $alpha: .2);
+    p{
+        margin-top: 10%;
+        text-align: center;
+        font-size: 50px;
+        font-weight: bolder;
+        color: rgba($color:red, $alpha: 1);
+    }
+}
+.clear{
+    margin-left: 20px;
+    margin-top: 10%;
+    
+    span{
+        font-size: 50px;
+        font-weight: bolder;
     }
 }
 .blue{
