--- a/rwdFinalwork/assets/style/all.css
+++ b/rwdFinalwork/assets/style/all.css
@@ -66,6 +66,9 @@ table {
   background-position: center center;
   background-size: cover; }
 
+.cursor-pointer {
+  cursor: pointer; }
+
 .container {
   width: 100%;
   margin-right: auto;
@@ -92,6 +95,9 @@ table {
   display: -ms-flexbox;
   display: flex; }
 
+.d-blcok {
+  display: block; }
+
 @media (max-width: 767px) {
   .d-sm-block {
     display: block; } }
@@ -113,6 +119,9 @@ table {
   font-size: 24px;
   font-weight: bolder;
   margin-bottom: 32px; }
+
+.list-disc {
+  list-style: disc; }
 
 .mb-5 {
   margin-bottom: 50px; }
@@ -144,6 +153,10 @@ table {
 
 .position-relative {
   position: relative; }
+
+@media (max-width: 767px) {
+  .position-sm-relative {
+    position: relative; } }
 
 .position-absolute {
   position: absolute; }
@@ -246,6 +259,8 @@ a {
     font-weight: bolder;
     font-size: 24px;
     margin-bottom: 16px; }
+  .footer-text ul {
+    margin-left: 16px; }
   .footer-text li {
     margin-bottom: 8px; }
   @media (max-width: 991px) {
@@ -282,6 +297,9 @@ a {
     .bg-item2 {
       width: 100%;
       height: 460px; } }
+  @media (max-width: 320px) {
+    .bg-item2 {
+      height: 600px; } }
 
 .question {
   font-size: 20px;
@@ -348,7 +366,17 @@ a {
     margin-bottom: 16px; }
   @media (max-width: 767px) {
     .chief-text {
-      text-align: center; } }
+      width: 100%;
+      color: white;
+      text-align: center;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      right: 0;
+      left: 0; } }
+  @media (max-width: 320px) {
+    .chief-text {
+      padding: 0; } }
 
 .media {
   display: -webkit-box;
@@ -420,7 +448,8 @@ h2 {
   color: #fff;
   padding: 8px 16px;
   margin-right: 5%;
-  border-radius: 5px; }
+  border-radius: 5px;
+  cursor: pointer; }
 
 .btn-secondary {
   background-color: rgba(128, 128, 128, 0.7); }
