--- a/jQuery-finalwork/css/style.css
+++ b/jQuery-finalwork/css/style.css
@@ -11598,4 +11598,34 @@ body {
 .top {
   left: 80%;
 }
+
+.jq-list {
+  position: absolute;
+  width: 100%;
+  top: 60%;
+  left: 0;
+  max-height: 0px;
+  -webkit-transition: all 0.8s;
+  transition: all 0.8s;
+  overflow: hidden;
+  z-index: 120;
+}
+
+.jq-list li {
+  background-color: #fff;
+  border: #009671  1px solid;
+  padding: 5px;
+}
+
+.jq-list li:hover {
+  background-color: #009671;
+}
+
+.jq-list li:hover a {
+  color: white;
+}
+
+.jq-list.active {
+  max-height: 100px;
+}
 /*# sourceMappingURL=style.css.map */
